Fixed horizontal overflow issue on UI

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -43,6 +43,7 @@ body {
   color: #fff;
   border-radius: 5px;
   overflow-y: auto;
+  overflow-x: hidden;
 
   outline: none;
   box-shadow: none;
